--- a/Final Project Rugby Results 1871 to 2023 Shorter.ipynb
+++ b/Final Project Rugby Results 1871 to 2023 Shorter.ipynb
@@ -16,7 +16,7 @@
    "id": "a297e3ee",
    "metadata": {},
    "source": [
-    "# Final Project Rugby Results 1871 to 2023"
+    "# Final Project: Rugby Results 1871 to 2023"
    ]
   },
   {
